force-app/main/default/objects/VentasClientes__c/VentasClientes__c.object-meta.xml
<CustomObject>
    <description>Venta de vehiculos de los clientes</description>
    <label>VentasClientes</label>
    <nameField>
        <label>Nombre de VentasClientes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VentasClientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>