force-app/main/default/objects/VentasClientes__c/fields/Cantidad_de_facturas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_facturas__c</fullName>
    <label>Cantidad de facturas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>