force-app/main/default/objects/VentasClientes__c/fields/Codigo_de_la_compa_a__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_la_compa_a__c</fullName>
    <label>Codigo de la compañía</label>
    <length>10</length>
    <type>Text</type>
</CustomField>