force-app/main/default/objects/VentasClientes__c/fields/Codigo_de_la_linea_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_la_linea_de_negocio__c</fullName>
    <label>Codigo de la linea de negocio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>