force-app/main/default/objects/VentasClientes__c/fields/Codigo_del_segmento__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_segmento__c</fullName>
    <label>Codigo del segmento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>