force-app/main/default/objects/VentasClientes__c/fields/Costo_en_cordobas__c.field-meta.xml
<CustomField>
    <fullName>Costo_en_cordobas__c</fullName>
    <label>Costo en cordobas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>