force-app/main/default/objects/VentasClientes__c/fields/Costo_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Costo_en_dolares__c</fullName>
    <label>Costo en dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>