force-app/main/default/objects/VentasClientes__c/fields/Descuento_en_cordobas__c.field-meta.xml
<CustomField>
    <fullName>Descuento_en_cordobas__c</fullName>
    <label>Descuento en cordobas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>