force-app/main/default/objects/VentasClientes__c/fields/Fecha_de_ingreso_del_registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ingreso_del_registro__c</fullName>
    <label>Fecha de ingreso del registro</label>
    <type>Date</type>
</CustomField>