force-app/main/default/objects/VentasClientes__c/fields/Fecha_de_la_factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_factura__c</fullName>
    <label>Fecha de la factura</label>
    <type>Date</type>
</CustomField>