force-app/main/default/objects/VentasClientes__c/fields/Hora_de_modificiacion_del_registro__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_modificiacion_del_registro__c</fullName>
    <label>Hora de modificiacion del registro</label>
    <length>6</length>
    <type>Text</type>
</CustomField>