force-app/main/default/objects/VentasClientes__c/fields/Monto_de_la_devolucion_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_la_devolucion_en_dolares__c</fullName>
    <label>Monto de la devolucio en dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>