force-app/main/default/objects/VentasClientes__c/fields/Monto_de_la_venta_en_cordobas__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_la_venta_en_cordobas__c</fullName>
    <label>Monto de la venta en cordobas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>