force-app/main/default/objects/VentasClientes__c/fields/Programa_que_lo_ingresa__c.field-meta.xml
<CustomField>
    <fullName>Programa_que_lo_ingresa__c</fullName>
    <label>Programa que lo ingresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>