force-app/main/default/objects/VentasClientes__c/fields/Tipo_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_factura__c</fullName>
    <label>Tipo de factura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>