force-app/main/default/objects/VentasClientes__c/fields/Venta_credito_finaciera_cor__c.field-meta.xml
<CustomField>
    <fullName>Venta_credito_finaciera_cor__c</fullName>
    <label>Venta credito finaciera cor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>