force-app/main/default/objects/VentasClientes__c/fields/Venta_credito_finaciera_usd__c.field-meta.xml
<CustomField>
    <fullName>Venta_credito_finaciera_usd__c</fullName>
    <label>Venta credito finaciera usd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>