force-app/main/default/objects/VentasClientes__c/fields/venta_credito_financiera_cor__c.field-meta.xml
<CustomField>
    <fullName>venta_credito_financiera_cor__c</fullName>
    <label>Monto venta credito financiero cordoba</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>