force-app/main/default/objects/VentasClientes__c/fields/venta_de_credito_financiero_usd__c.field-meta.xml
<CustomField>
    <fullName>venta_de_credito_financiero_usd__c</fullName>
    <label>Monto de venta credito finaciero usd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>